--- a/css/carrusel.css
+++ b/css/carrusel.css
@@ -119,3 +119,10 @@
     scroll-snap-align: center;
   }
 }
+
+.instagram-media {
+  margin: 20px auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
